--- a/components/x99x710wx-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/x99x710wx-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: x99x710wx-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-bc0f3ba835.yzcm.p3.openshiftapps.com/rhtap/rhtap-qe:9e2e275ef539bf2d4f300b1a54fbb410f9a27e10@sha256:7e65300e880ebb2c0d3620118543e3311fb8b6c1d1323d775e91c97c7d0d36a4
+          name: container-image
